[gd_scene load_steps=3 format=3 uid="uid://0xf5cgiejrjx"]

[ext_resource type="Script" path="res://settings.gd" id="1_j1led"]

[sub_resource type="LabelSettings" id="LabelSettings_lm54m"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_j1led")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_right = 320.0
offset_bottom = 64.0
scale = Vector2(4, 4)
text = "SETTINGS"
label_settings = SubResource("LabelSettings_lm54m")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Display Resolution Title" type="Label" parent="."]
layout_mode = 0
offset_left = 312.0
offset_top = 224.0
offset_right = 568.0
offset_bottom = 288.0
text = "Display Resolution"
label_settings = SubResource("LabelSettings_lm54m")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Resolution Scale Title" type="Label" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 288.0
offset_right = 560.0
offset_bottom = 352.0
text = "Resolution Scale"
label_settings = SubResource("LabelSettings_lm54m")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="FPS Limit Title" type="Label" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 352.0
offset_right = 520.0
offset_bottom = 416.0
text = "FPS Limit
"
label_settings = SubResource("LabelSettings_lm54m")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="DisplayResolution" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 576.0
offset_top = 240.0
offset_right = 768.0
offset_bottom = 271.0
item_count = 2
selected = 0
fit_to_longest_item = false
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "640x480"
popup/item_1/id = 1

[node name="Resolution Scale" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 576.0
offset_top = 304.0
offset_right = 768.0
offset_bottom = 335.0
item_count = 4
selected = 0
fit_to_longest_item = false
popup/item_0/text = "100%"
popup/item_0/id = 0
popup/item_1/text = "75%"
popup/item_1/id = 1
popup/item_2/text = "50%"
popup/item_2/id = 2
popup/item_3/text = "25%"
popup/item_3/id = 3

[node name="FPS Limit" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 576.0
offset_top = 368.0
offset_right = 768.0
offset_bottom = 399.0
item_count = 3
selected = 0
fit_to_longest_item = false
popup/item_0/text = "144"
popup/item_0/id = 0
popup/item_1/text = "120"
popup/item_1/id = 1
popup/item_2/text = "60"
popup/item_2/id = 2

[node name="Save & Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 488.0
offset_right = 549.0
offset_bottom = 519.0
text = "Save & Exit"

[node name="Cancel" type="Button" parent="."]
layout_mode = 0
offset_left = 648.0
offset_top = 488.0
offset_right = 708.0
offset_bottom = 519.0
text = "Cancel"

[node name="Fullscreen" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 432.0
offset_right = 471.0
offset_bottom = 463.0
text = "Fullscreen"

[connection signal="item_selected" from="DisplayResolution" to="." method="_on_display_resolution_item_selected"]
[connection signal="pressed" from="Save & Exit" to="." method="_on_save__exit_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_cancel_pressed"]
[connection signal="toggled" from="Fullscreen" to="." method="_on_fullscreen_toggled"]
